[package]
name = "kree"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0", features = ["derive"] }
relative-path = "1.7.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.87"
serde_yaml = "0.9"
